--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
     ],
     "minimum-stability": "dev",
     "require": {
-        "laravel/framework": "^5.4"
+        "laravel/framework": "^5.4|^6.0"
     },
     "require-dev": {
         "phpunit/phpunit": "*",
